--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,6 +7,7 @@
     <%=f.input :first_name  %>
     <%=f.input :last_name  %>
     <%=f.input :photo  %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%=f.input :degree  %>
     <%=f.input :area  %>
     <%=f.input :date_of_birth, as: :date, html5: true %>
