--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -1,22 +1,39 @@
 <h2> Scholarships </h2>
 
-<% @scholarships.each do |scholarship|%>
-<div class="card-product">
-  <img src= "<%= scholarship.institution.photo %>" />
-  <div class="card-product-infos">
-    <% if not favorite?(scholarship) %>
-      <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
-        <i class="fas fa-heart" style = "color: pink;"></i>
+<% if user_signed_in? %>
+  <% @scholarships.each do |scholarship|%>
+  <div class="card-product">
+    <img src= "<%= scholarship.institution.photo %>" />
+    <div class="card-product-infos">
+      <% if not favorite?(scholarship) %>
+        <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
+          <i class="fas fa-heart" style = "color: pink;"></i>
+        <% end %>
+      <% else %>
+        <%= link_to scholarship_favorite_path(scholarship, current_user.favorites.find_by(scholarship: scholarship)), method: :delete do %>
+          <i class="fas fa-heart" style = "color: black;"></i>
+        <% end %>
       <% end %>
-    <% else %>
-      <%= link_to scholarship_favorite_path(scholarship, current_user.favorites.find_by(scholarship: scholarship)), method: :delete do %>
-        <i class="fas fa-heart" style = "color: black;"></i>
-      <% end %>
-    <% end %>
-    <h2><%= scholarship.name %></h2>
-    <h2><%= scholarship.institution.name %></h2>
-    <p><%= scholarship.description %></p>
+      <h2><%= scholarship.name %></h2>
+      <h2><%= scholarship.institution.name %></h2>
+      <p><%= scholarship.description %></p>
+    </div>
   </div>
-</div>
-<br>
+  <br>
+  <% end %>
+  <% else %>
+    <% @scholarships.each do |scholarship|%>
+      <div class="card-product">
+        <img src= "<%= scholarship.institution.photo %>" />
+        <div class="card-product-infos">
+          <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
+            <i class="fas fa-heart" style = "color: pink;"></i>
+          <% end %>
+          <h2><%= scholarship.name %></h2>
+          <h2><%= scholarship.institution.name %></h2>
+          <p><%= scholarship.description %></p>
+        </div>
+      </div>
+      <br>
+    <% end %>
 <% end %>
