--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,7 @@
 @import "avatar";
 @import "navbar";
 @import "footer";
+@import "body";
+@import "arrow";
+@import "banner";
+@import "card_category";
