formatted landing page and changed areas in seeds

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #ffe0cc;
+  background: #ffd1b3;
   display: flex;
   align-items: center;
   justify-content: space-between;
