--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,11 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1471874622662-3fe52245b2f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567592368/banner_image/450357941_f9b8c99588_o_zkqw8g.jpg);">
 
   <div class="container">
     <div class="tag-line">
       <h1>Your funding finder</h1>
       <h3>Find a scholarship to support your PhD studies in Europe</h3>
     </div>
-    <!-- <h3>Find books you love</h3> -->
-    <!-- <div class="position-search"> -->
-      <!-- <div class="home-search-form  form-inline"> -->
-        <!--<%#= form_tag scholarships_path, method: :get do %>
-          <%#= text_field_tag :query,
-          params[:query],
-          class: "form-control",
-          placeholder: "Find a scholarship"
-           %>
-            <%#= submit_tag "Search", class: "btn btn-warning" %>
-    <%# end %>-->
-     <!--  </div> -->
 
-    <!-- </div> -->
   </div>
 </div>
 
@@ -29,38 +16,58 @@
 
 <div class="row">
   <div class="col-sm-12 col-md-6 col-lg-4">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567531878/areas_photos/asli-yilmaz-u1PX1Q26Kpo-unsplash_ftfous.jpg)">
+      Geography
+    </div>
+  </div>
 
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567531878/areas_photos/asli-yilmaz-u1PX1Q26Kpo-unsplash_ftfous.jpg)">
-        Geography
-      </div>
-
+  <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567532089/areas_photos/daniel-h-tong-xBeid9r1paU-unsplash_j6odbw.jpg)">
         History
       </div>
+    </div>
 
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567532146/areas_photos/sai-kiran-anagani-5Ntkpxqt54Y-unsplash_dmsobv.jpg)">
         Computer Science
       </div>
+    </div>
 
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567533775/areas_photos/psychology_rlrzto.png)">
         Psychology
       </div>
+    </div>
 
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567532966/areas_photos/m-b-m-ZzOa5G8hSPI-unsplash_vfswmm.jpg)">
         Economics
       </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567533065/areas_photos/alexandre-debieve-FO7JIlwjOtU-unsplash_u6mqdj.jpg)">
         ICT
       </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567532989/areas_photos/mario-purisic-jG1z5o7NCq4-unsplash_mlpjpa.jpg)">
         Anthropology
       </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567532956/areas_photos/glenn-carstens-peters-npxXWgQ33ZQ-unsplash_a2uiii.jpg)">
         Communication
       </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/ddec9kvgc/image/upload/v1567533041/areas_photos/adeolu-eletu-unRkg2jH1j0-unsplash_ov9k7j.jpg)">
         Management
       </div>
+    </div>
 
 
   </div>
