add favorite to profile show page

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -17,3 +17,16 @@ text-decoration: none;
   opacity: 0.5;
   }
 }
+
+
+.favorite {
+  overflow-y: scroll;
+  height: 500px;
+}
+
+
+.myalert {
+  overflow-y: scroll;
+  height: 500px;
+}
+
