--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,7 @@
-<h3>USER PROFILE</h3>
+<h3>USER LIST</h3>
 
 <%@users.each do |user|%>
 <ul>
-  <li> <%=user.first_name%></li>
-  <li> <%=user.last_name%></li>
-  <li> <%=user.area%></li>
-  <li> <%=user.nationality%></li>
-  <li> <%=user.country%></li>
+  <li> <%=user.first_name%> <%=user.last_name%>    (<%=user.role%>)</li>
 </ul>
-
 <% end %>
