--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -1,37 +1,37 @@
 <h2> Scholarships </h2>
 
 <% if user_signed_in? %>
-  <% @scholarships.each do |scholarship|%>
+  <% @results.each do |result|%>
   <div class="card-product">
-    <img src= "<%= scholarship.institution.photo %>" />
+    <img src= "<%= result.institution.photo %>" />
     <div class="card-product-infos">
-      <% if not favorite?(scholarship) %>
-        <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
+      <% if not favorite?(result) %>
+        <%= link_to scholarship_favorites_path(result), method: :post do %>
           <i class="fas fa-heart" style = "color: pink;"></i>
         <% end %>
       <% else %>
-        <%= link_to scholarship_favorite_path(scholarship, current_user.favorites.find_by(scholarship: scholarship)), method: :delete do %>
+        <%= link_to scholarship_favorite_path(result, current_user.favorites.find_by(scholarship: result)), method: :delete do %>
           <i class="fas fa-heart" style = "color: black;"></i>
         <% end %>
       <% end %>
-      <h2><%= scholarship.name %></h2>
-      <h2><%= scholarship.institution.name %></h2>
-      <p><%= scholarship.description %></p>
+      <h2><%= result.name %></h2>
+      <h2><%= result.institution.name %></h2>
+      <p><%= result.description %></p>
     </div>
   </div>
   <br>
   <% end %>
   <% else %>
-    <% @scholarships.each do |scholarship|%>
+    <% @results.each do |result|%>
       <div class="card-product">
-        <img src= "<%= scholarship.institution.photo %>" />
+        <img src= "<%= result.institution.photo %>" />
         <div class="card-product-infos">
-          <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
+          <%= link_to scholarship_favorites_path(result), method: :post do %>
             <i class="fas fa-heart" style = "color: pink;"></i>
           <% end %>
-          <h2><%= scholarship.name %></h2>
-          <h2><%= scholarship.institution.name %></h2>
-          <p><%= scholarship.description %></p>
+          <h2><%= result.name %></h2>
+          <h2><%= result.institution.name %></h2>
+          <p><%= result.description %></p>
         </div>
       </div>
       <br>
