--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -2,38 +2,44 @@
 
 <% if user_signed_in? %>
   <% @scholarships.each do |scholarship|%>
-  <div class="card-product">
-    <img src= "<%= scholarship.institution.photo %>" />
-    <div class="card-product-infos">
-      <% if not favorite?(scholarship) %>
+  <%= link_to scholarship_path(scholarship) do %>
+    <div class="card-product">
+      <%= image_tag scholarship.institution.photo_url %>
+        <div class="card-product-infos">
+          <% if not favorite?(scholarship) %>
+            <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
+              <i class="fas fa-heart" style = "color: pink;"></i>
+            <% end %>
+          <% else %>
+            <%= link_to scholarship_favorite_path(scholarship, current_user.favorites.find_by(scholarship: scholarship)), method: :delete do %>
+              <i class="fas fa-heart" style = "color: black;"></i>
+            <% end %>
+          <% end %>
+            <h2><%= scholarship.name %></h2>
+            <h2><%= scholarship.institution.name %></h2>
+            <p><%= scholarship.description %></p>
+          </div>
+      </div>
+    <% end %>
+  <% end %>
+
+<% else %>
+  <% @scholarships.each do |scholarship|%>
+    <%= link_to scholarship_path(scholarship) do %>
+    <div class="card-product">
+      <%= image_tag scholarship.institution.photo_url %>
+      <div class="card-product-infos">
         <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
           <i class="fas fa-heart" style = "color: pink;"></i>
         <% end %>
-      <% else %>
-        <%= link_to scholarship_favorite_path(scholarship, current_user.favorites.find_by(scholarship: scholarship)), method: :delete do %>
-          <i class="fas fa-heart" style = "color: black;"></i>
-        <% end %>
-      <% end %>
-      <h2><%= scholarship.name %></h2>
-      <h2><%= scholarship.institution.name %></h2>
-      <p><%= scholarship.description %></p>
-    </div>
-  </div>
-  <br>
-  <% end %>
-  <% else %>
-    <% @scholarships.each do |scholarship|%>
-      <div class="card-product">
-        <img src= "<%= scholarship.institution.photo %>" />
-        <div class="card-product-infos">
-          <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
-            <i class="fas fa-heart" style = "color: pink;"></i>
-          <% end %>
-          <h2><%= scholarship.name %></h2>
-          <h2><%= scholarship.institution.name %></h2>
-          <p><%= scholarship.description %></p>
-        </div>
+        <h2><%= scholarship.name %></h2>
+        <h2><%= scholarship.institution.name %></h2>
+        <p><%= scholarship.description %></p>
       </div>
-      <br>
+
+    </div>
     <% end %>
+
+      <br>
+  <% end %>
 <% end %>
