--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,17 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+<div class="row justify-content-center">
+  <div class="form-inputs col-12 col-lg-6">
 
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  </div>
+</div>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+
+
+<div class="row justify-content-center">
+  <div class="form-inputs col-12 col-lg-6">
     <%=f.input :first_name  %>
     <%=f.input :last_name  %>
     <%=f.input :photo  %>
@@ -14,12 +22,14 @@
     <%=f.input :gender  %>
     <%=f.input :nationality  %>
     <%=f.input :country  %>
-
+    </div>
   </div>
-
-  <div class="form-actions">
+  <div class="row justify-content-center">
+    <div class="form-actions btn-secondary">
     <%= f.button :submit, "Update" %>
+    </div>
   </div>
+</div>
 <% end %>
 
 <%= link_to "Back", :back %>
