--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,15 @@
-<h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="container bg-white">
+  <div class="row justify-content-center">
+    <div class="form-inputs col-12 col-lg-6">
+    <h2>Sign up</h2>
 
-  <div class="form-inputs">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="form-inputs col-12 col-lg-6">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -15,11 +21,15 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    </div>
   </div>
+  <div class="row justify-content-center">
+    <div class="form-actions btn btn-secondary">
 
-  <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
+    </div>
   </div>
+</div>
 <% end %>
 
 <%= render "devise/shared/links" %>
