--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,63 +1,58 @@
 
-
-<!-- <div class="profile">
-  <h3>USER PROFILE</h3>
-
-  <ul>
-    <li>Full Name: <%=@user.first_name%> <%=@user.last_name%> </li>
-    <li> Your area of study: <%=@user.area%></li>
-    <li> Nationality: <%=@user.nationality%></li>
-    <li> Your actual country: <%=@user.country%></li>
-    <li> Date of birth: <%=@user.date_of_birth%></li>
-    <li> Gender: <%=@user.gender%></li>
-  </ul>
-
-</div>
- -->
-
 <div class="row equal d-flex justify-content-center overflow-auto">
 
   <div class="col-xs-6 col-sm-3">
+    <h2>My Favorite</h2>
     <div class="favorites border border-dark">
       <div style="border:1px solid black" class="favorite">
-      <h2>My Favorite</h2>
+
       <%current_user.favorites.each do |favorite| %>
-      <ul>
-        <%=link_to scholarships_path do %>
-        <li li class="nav-item dropdown"> <%=favorite.scholarship.name %></li>
-      </ul>
-      <% end %>
+        <div class="card-product">
+          <%=image_tag favorite.scholarship.institution.photo_url %>
+          <div class="card-product-infos">
+            <h2><%= link_to favorite.scholarship.name, scholarships_path %></h2>
+          </div>
+        </div>
       <% end%>
       </div>
     </div>
   </div>
 
   <div class="col-xs-6 col-sm-3">
-    <div class="border border-dark">
-      <div class="myalert">
-      <h2>My Alert</h2>
-      <%current_user.alerts.each do |alert|%>
+    <h2>My Alerts</h2>
+    <div class="favorites border border-dark">
+      <div style="border:1px solid black" class="favorite">
 
-      <ul>
-        <li><%=alert.area.name%></li>
-      </ul>
-      <% end %>
+      <%current_user.alerts.each do |alert|%>
+        <div class="card-product">
+          <%=image_tag alert.institution.photo_url %>
+          <div class="card-product-infos">
+            <h2><%= link_to alert.area.name, scholarships_path %></h2>
+            <p><strong><%=alert.institution.name  %></strong></p>
+          </div>
+        </div>
+      <% end%>
       </div>
     </div>
   </div>
 
-  <div class="col-xs-6 col-sm-3 container3">
-    <div class="profile border border-dark">
-      <div class="profile">
-        <h2>My Profile</h2>
-        <ul>
-          <li>Full Name: <%=@user.first_name%> <%=@user.last_name%> </li>
-          <li> Your area of study: <%=@user.area%></li>
-          <li> Nationality: <%=@user.nationality%></li>
-          <li> Country: <%=@user.country%></li>
-          <li> Date of birth: <%=@user.date_of_birth%></li>
-          <li> Gender: <%=@user.gender%></li>
-        </ul>
+  <div class="col-xs-6 col-sm-3">
+    <h2>My Profile</h2>
+    <div class="personal-infor border border-dark">
+      <div style="border:1px solid black" class="#">
+        <div class="card-product1">
+
+          <div class="card-product-infos">
+            <ul>
+              <li><h5>Full Name: <%=@user.first_name%> <%=@user.last_name%> </h5></li>
+              <li> <h5>Your area of study: <%=@user.area%></h5></li>
+              <li> <h5>Nationality: <%=@user.nationality%></h5></li>
+              <li> <h5>Country: <%=@user.country%></h5></li>
+              <li> <h5>Date of birth: <%=@user.date_of_birth%></h5></li>
+              <li> <h5>Gender: <%=@user.gender%></h5></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <div class="icon">
