--- a/app/views/scholarships/show.html.erb
+++ b/app/views/scholarships/show.html.erb
@@ -10,24 +10,7 @@
       <p><%= @scholarship.description %></p>
       <%= link_to "See more information", @scholarship.url, class: 'btn btn-outline-secondary rounded-pill'%>
     </div>
-    <div>
-      <% if user_signed_in? %>
-        <% if not favorite?(@scholarship) %>
-          <%= link_to scholarship_favorites_path(@scholarship), method: :post do %>
-            <i class="fas fa-heart" style = "color: pink;"></i>
-          <% end %>
-        <% else %>
-          <%= link_to scholarship_favorite_path(@scholarship, current_user.favorites.find_by(scholarship: @scholarship)), method: :delete do %>
-            <i class="fas fa-heart" style = "color: black;"></i>
-
-          <% end %>
-        <% end %>
-      <% else %>
-       <%= link_to scholarship_favorites_path(@scholarship), method: :post do %>
-          <i class="fas fa-heart" style = "color: pink;"></i>
-        <% end %>
-      <% end %>
-    </div>
+     <%= icon(current_user.likes?(@scholarship) ? "fas color-fas" : "far color-far" , "heart") %>
     <div>
       <%= link_to "Back to Scholarships", scholarships_path, class: 'btn btn-outline-secondary rounded-pill' %>
     </div>
