added deadline on favorites

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,18 @@
 
 <div class="row equal d-flex justify-content-center overflow-auto">
 
-  <div class="col-xs-6 col-sm-3">
+  <div class="col-xs-8 col-sm-4">
     <h2>My Favorite</h2>
-    <div class="favorites border border-dark">
-      <div style="border:1px solid black" class="favorite">
+    <div class="favorites">
+      <div class="favorite">
 
       <%current_user.favorites.each do |favorite| %>
         <div class="card-product">
           <%=image_tag favorite.scholarship.institution.photo_url %>
           <div class="card-product-infos">
             <h2><%= link_to favorite.scholarship.name, scholarships_path %></h2>
+            <p>Aplication starts: <%=favorite.scholarship.application_start_date%></p>
+            <p>Deadline: <%=favorite.scholarship.application_end_date %></p>
           </div>
         </div>
       <% end%>
@@ -18,10 +20,10 @@
     </div>
   </div>
 
-  <div class="col-xs-6 col-sm-3">
+    <div class="col-xs-8 col-sm-4">
     <h2>My Alerts</h2>
-    <div class="favorites border border-dark">
-      <div style="border:1px solid black" class="favorite">
+    <div class="favorites">
+      <div class="favorite">
 
       <%current_user.alerts.each do |alert|%>
         <div class="card-product">
@@ -36,12 +38,10 @@
     </div>
   </div>
 
-  <div class="col-xs-6 col-sm-3">
+ <div class="col-xs-8 col-sm-4">
     <h2>My Profile</h2>
-    <div class="personal-infor border border-dark">
-      <div style="border:1px solid black" class="#">
+    <div class="personal-infor">
         <div class="card-product1">
-
           <div class="card-product-infos">
             <ul>
               <li><h5>Full Name: <%=@user.first_name%> <%=@user.last_name%> </h5></li>
@@ -54,11 +54,11 @@
           </div>
         </div>
       </div>
+       <div class="icon">
+          <%= link_to edit_user_registration_path do %>
+          <i class="fas fa-pencil-alt"></i>
+          <% end %>
+      </div>
     </div>
-    <div class="icon">
-      <%= link_to edit_user_registration_path do %>
-      <i class="fas fa-pencil-alt"></i>
-      <% end %>
-    </div>
+
   </div>
-</div>
