--- a/app/assets/stylesheets/components/_product_card.scss
+++ b/app/assets/stylesheets/components/_product_card.scss
@@ -30,3 +30,10 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+
+.link-image a, .link-image:hover, .link-image a:active, .link-image a {
+  // text-decoration: none;
+  // height: 100%;
+  // width: 120px;
+  // object-fit: cover;
+}
