Added heart for user not logged and changed style heart

--- a/app/assets/stylesheets/components/_product_card.scss
+++ b/app/assets/stylesheets/components/_product_card.scss
@@ -29,6 +29,11 @@
 
 .card-product .card-product-infos {
   padding: 16px;
+
+}
+
+.color-far {
+  color: #f8a978;
 }
 
 .link-image a, .link-image:hover, .link-image a:active, .link-image a {
