--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -13,7 +13,7 @@
 
 
         <div class="card-product-infos">
-          <%= icon(current_user.likes?(scholarship) ? "fas color-fas" : "far color-far" , "heart") %>
+          <%= icon(current_user.likes?(scholarship) ? "fas" : "far color-far" , "heart") %>
           <h2><%= scholarship.name %></h2>
           <h2><%= scholarship.institution.name %></h2>
           <p><%= scholarship.description %></p>
@@ -28,6 +28,9 @@
     <div class="card-product">
       <%= image_tag scholarship.institution.photo_url %>
       <div class="card-product-infos">
+        <%= link_to scholarship_favorites_path(scholarship), method: :post do %>
+        <i class="far fa-heart color-far"></i>
+      <% end %>
 
         <h2><%= scholarship.name %></h2>
         <h2><%= scholarship.institution.name %></h2>
