show image in alerts

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,10 +27,20 @@
 
       <%current_user.alerts.each do |alert|%>
         <div class="card-product">
-          <%=image_tag alert.institution.photo_url %>
+          <%if alert.institution.present?%>
+            <%=image_tag alert.institution.photo_url %>
+          <% else %>
+            <%= image_tag alert.area.photo_url %>
+          <% end %>
           <div class="card-product-infos">
-            <h2><%= link_to alert.area.name, scholarships_path %></h2>
-            <p><strong><%=alert.institution.name  %></strong></p>
+            <%if alert.institution.present? && alert.institution.present? %>
+              <p><strong><%=alert.institution.name  %></strong></p>
+              <h2><%= link_to alert.area.name, scholarships_path %></h2>
+            <% elsif alert.institution.present? %>
+              <p><strong><%=alert.institution.name  %></strong></p>
+            <% else %>
+              <h2><%= link_to alert.area.name, scholarships_path %></h2>
+            <% end %>
           </div>
         </div>
       <% end%>
