--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
       <%current_user.favorites.each do |favorite| %>
         <div class="card-product">
           <%=image_tag favorite.scholarship.institution.photo_url %>
-          <div class="card-product-infos">
+          <div class="card_product_infos">
             <h2><%= link_to favorite.scholarship.name, scholarships_path %></h2>
             <p>Aplication starts: <%=favorite.scholarship.application_start_date%></p>
             <p>Deadline: <%=favorite.scholarship.application_end_date %></p>
@@ -28,7 +28,7 @@
       <%current_user.alerts.each do |alert|%>
         <div class="card-product">
           <%=image_tag alert.institution.photo_url %>
-          <div class="card-product-infos">
+          <div class="card_product_infos-">
             <h2><%= link_to alert.area.name, scholarships_path %></h2>
             <p><strong><%=alert.institution.name  %></strong></p>
           </div>
@@ -42,7 +42,7 @@
     <h2>My Profile</h2>
     <div class="personal-infor">
         <div class="card-product1">
-          <div class="card-product-infos">
+          <div class="card_product_infos">
             <ul>
               <li><h5>Full Name: <%=@user.first_name%> <%=@user.last_name%> </h5></li>
               <li> <h5>Your area of study: <%=@user.area%></h5></li>
