--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -39,7 +39,7 @@
 
 
           <div class="card_product_infos">
-            <%= link_to scholarship_favorites_path(result), method: :post do %>
+            <%= link_to new_session_path, alert: "You need to Login to continue :)" %>
               <i class="fas fa-heart color-far"></i>
             <% end %>
 
