--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -36,10 +36,8 @@
              </div>
            <% end %>
 
-
-
           <div class="card_product_infos">
-            <%= link_to new_session_path, alert: "You need to Login to continue :)" %>
+            <%= link_to new_user_session_path, alert: "You need to Login to continue :)" do %>
               <i class="fas fa-heart color-far"></i>
             <% end %>
 
