--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,32 @@
 <div class="container">
-<div class="row justify-content-center">
-  <div class="form-inputs col-12 col-lg-6">
-
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
-  </div>
-</div>
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-
-
-
-<div class="row justify-content-center">
-  <div class="form-inputs col-12 col-lg-6">
-    <%=f.input :first_name  %>
-    <%=f.input :last_name  %>
-    <%=f.input :photo  %>
-    <%= f.input :photo_cache, as: :hidden %>
-    <%=f.input :degree  %>
-    <%=f.input :area  %>
-    <%=f.input :date_of_birth, as: :date, html5: true %>
-    <%=f.input :gender  %>
-    <%=f.input :nationality  %>
-    <%=f.input :country  %>
-    </div>
-  </div>
   <div class="row justify-content-center">
-    <div class="form-actions btn-secondary">
-    <%= f.button :submit, "Update" %>
+    <div class="col-xs-12 col-sm-6 col-sm-offset-6 justify-content-center form-login">
+
+      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= f.error_notification %>
+      <div class="form-inputs">
+        <%=f.input :first_name  %>
+        <%=f.input :last_name  %>
+        <%=f.input :photo  %>
+        <%= f.input :photo_cache, as: :hidden %>
+        <%=f.input :degree  %>
+        <%=f.input :area  %>
+        <%=f.input :date_of_birth, as: :date, html5: true %>
+        <%=f.input :gender  %>
+        <%=f.input :nationality  %>
+        <%=f.input :country  %>
+      </div>
+
+      <div class="form-actions">
+      <%= f.button :submit, "Update", class: "btn btn-warning" %>
+      </div>
+      <% end %>
+      <%= link_to "Back", :back %>
     </div>
   </div>
 </div>
-<% end %>
 
-<%= link_to "Back", :back %>
+
+
