--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,32 @@
 
-<div class="container bg-white">
+<div class="container">
   <div class="row justify-content-center">
-    <div class="form-inputs col-12 col-lg-6">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4 justify-content-center form-login">
     <h2>Sign up</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
+      <div class="form-inputs">
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+        </div>
+        <div class="form-actions">
+          <%= f.button :submit, "Sign up", class: "btn btn-warning" %>
+        </div>
+        <% end %>
+        <%= render "devise/shared/links" %>
+      </div>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="form-inputs col-12 col-lg-6">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    </div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="form-actions btn btn-secondary">
 
-    <%= f.button :submit, "Sign up" %>
-    </div>
-  </div>
-</div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+
