changed user show page to add notifications inside alerts. Added a method to change notifications status inside the alert controller. Added a sort method inside the User controllers to allow the sorting of alerts by notification number. Refactored backgroun job to check new scholarships. Added a method in the alert model to check if there are unread notifications in the alert. Added an after_save method on the notification model to add the number of notifications to each alert. Fixed the area query logic in the home page (area.name instead of area). Added an extra route for the method that changes the notification status. Added a notif_count column to Alerts.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,9 +32,8 @@
 <div class="row">
 
   <% @areas.each do |area|  %>
-
     <div class="col-sm-12 col-md-6 col-lg-4 filter">
-      <%= link_to scholarships_path({query: area}) do %>
+      <%= link_to scholarships_path({query: area.name}) do %>
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path area.photo %>')">
         <%= area.name %>
       </div>
