--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
         <div class="card-product">
           <%=image_tag scholarship.institution.photo_url %>
           <div class="card_product_infos">
-            <h2><%= link_to scholarship.name, scholarships_path %></h2>
+            <h2><%= link_to scholarship.name, scholarship_path(scholarship.id) %></h2>
             <p>Aplication starts: <%=scholarship.application_start_date%></p>
             <p>Deadline: <%=scholarship.application_end_date %></p>
           </div>
