--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 .banner {
   min-height: calc(100vh - 55px);;
   background-size: cover;
   background-position: center;
   padding: 150px 0;
   margin-top: 0;
+
 }
 
 .banner h1 {
@@ -12,6 +14,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 42px;
   font-weight: bold;
+  font-family: "Roboto", sans-serif;
 }
 
 .banner h3 {
@@ -19,4 +22,5 @@
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-family: "Roboto", sans-serif;
 }
