--- a/app/assets/stylesheets/components/_product_card.scss
+++ b/app/assets/stylesheets/components/_product_card.scss
@@ -1,16 +1,23 @@
 .card-product {
   overflow: hidden;
   height: 120px;
-  background: white;
+  background: #f2f2f2;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.card-product:hover {
+  box-shadow: 0 0 25px rgba(0,0,0,0.2);
 }
 
 .card-product img {
   height: 100%;
   width: 120px;
   object-fit: cover;
+
 }
 
 .card-product h2 {
@@ -32,13 +39,24 @@
 
 }
 
+.card-link {
+  position: absolute;
+  top: 26px;
+  bottom: 0px;
+  right: 0px;
+  width: 100%;
+  z-index: 2;
+}
+
+
+.card-product .fa-heart {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 .color-far {
   color: #f8a978;
 }
 
-.link-image a, .link-image:hover, .link-image a:active, .link-image a {
-  // text-decoration: none;
-  // height: 100%;
-  // width: 120px;
-  // object-fit: cover;
-}
+
