Show page scholarship formated and PhD corrected in seeds

--- a/app/assets/stylesheets/components/_product_card.scss
+++ b/app/assets/stylesheets/components/_product_card.scss
@@ -36,6 +36,10 @@
   color: #f8a978;
 }
 
+.color-fas {
+  color: #f8a978;
+}
+
 .link-image a, .link-image:hover, .link-image a:active, .link-image a {
   // text-decoration: none;
   // height: 100%;
