changed sorting logic on users controller. Added a logic to count unread notifications on the notification model. On the user show page, changed the logic to order the alerts based on the unread notifications. Added a migration to add the column unread_notif_count on the alerts table.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,7 +45,7 @@
             <% end %>
 
             <% if alert.unread_notifications? %>
-               <%=  link_to pluralize(alert.notifications.count, 'new notification'), change_notification_status_path(alert.id), method: :patch %>
+               <%=  link_to pluralize(alert.unread_notif_count, 'new notification'), change_notification_status_path(alert.id), method: :patch %>
             <% end %>
 
           </div>
