changed font family, font size and font color for welcoming logged  user

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+
 .navbar-lewagon {
 
   justify-content: space-between;
@@ -9,6 +11,7 @@
   flex-grow: 0;
 }
 
+
 .navbar-lewagon .navbar-brand img {
   width: 35px;
   opacity: 100%;
@@ -17,5 +20,9 @@
 
 .navbar-nav p {
 margin-top: 10px;
-margin-right: 5px;
+margin-right: 8px;
+font-size: 14px;
+font-family: "Roboto", sans-serif;
+color: #666666;
+
 }
