--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <p> Hey, <%=current_user.first_name %> </p>
+          <p> Welcome, <%=current_user.first_name %> </p>
         </li>
         <% if current_user.profile_incomplete? %>
           <li class="nav-item">
