added a link to the See all Scholaships text on the indexpage.

--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="index-page">
-  <h1> See all Scholarships </h1>
+  <%= link_to(scholarships_path) do %> <h1> See all Scholarships </h1> <% end %>
 
   <% if user_signed_in? %>
     <div class="row">
@@ -21,7 +21,7 @@
           <%= link_to '', result, class: 'card-link' %>
         </div>
 
-      
+
 
 
 
