showpage margin formated

--- a/app/assets/stylesheets/components/_institution_card.scss
+++ b/app/assets/stylesheets/components/_institution_card.scss
@@ -34,8 +34,8 @@
   // flex-direction: column;
   // justify-content: center;
   align-items: center;
-  margin: 150px auto;
-  margin-bottom: 150px;
+  margin: 75px auto;
+  margin-bottom: 30px;
   object-fit: cover;
   position: relative;
 
@@ -117,8 +117,22 @@
 }
 
 .btn-back {
-  position: absolute;
-  bottom: 70px;
-  left: 382px;
+  // position: absolute;
+  // bottom: 70px;
+  // left: 382px;
 
+
+
+
+  width: 50%;
+  // height: 150%;
+  // border-radius: 6px;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  // margin: 50px auto;
+  margin-bottom: 100px;
+  // object-fit: cover;
+  // position: relative;
 }
