formatted profile page and bell and profile link on navbar

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,20 +2,22 @@
 <div class="row equal d-flex justify-content-center overflow-auto">
 
   <div class="col-xs-8 col-sm-4">
-    <h2>My Favorite</h2>
+
     <div class="favorites">
+      <h1>My Favorites</h1>
       <div class="favorite">
 
 
       <%current_user.favorites.each do |favorite| %>
       <% scholarship = Scholarship.find(favorite.favorited_id) %>
-        <div class="card-product">
+        <div class="card-product-profile">
           <%=image_tag scholarship.institution.photo_url %>
           <div class="card_product_infos">
-            <h2><%= link_to scholarship.name, scholarship_path(scholarship.id) %></h2>
+            <h2><%= scholarship.name%></h2>
             <p>Aplication starts: <%=scholarship.application_start_date%></p>
             <p>Deadline: <%=scholarship.application_end_date %></p>
           </div>
+          <%= link_to '', scholarship_path(scholarship.id), class: 'card-profile-link' %>
         </div>
       <% end%>
       </div>
@@ -23,12 +25,13 @@
   </div>
 
     <div class="col-xs-8 col-sm-4">
-    <h2>My Alerts</h2>
+
     <div class="favorites">
+      <h1>My Alerts</h1>
       <div class="favorite">
 
       <%@sorted_alerts.each do |alert|%>
-        <div class="card-product">
+        <div class="card-product-profile">
           <%if alert.institution.present?%>
             <%=image_tag alert.institution.photo_url %>
           <% else %>
@@ -37,11 +40,11 @@
           <div class="card_product_infos">
             <%if alert.institution.present? && alert.institution.present? %>
               <p><strong><%=alert.institution.name  %></strong></p>
-              <h2><%= link_to alert.area.name, scholarships_path %></h2>
+              <h2><%= alert.area.name %></h2>
             <% elsif alert.institution.present? %>
               <p><strong><%=alert.institution.name  %></strong></p>
             <% else %>
-              <h2><%= link_to alert.area.name, scholarships_path %></h2>
+              <h2><%= alert.area.name %></h2>
             <% end %>
 
             <% if alert.unread_notifications? %>
@@ -56,8 +59,9 @@
   </div>
 
  <div class="col-xs-8 col-sm-4">
-    <h2>My Profile</h2>
-    <div class="personal-infor">
+
+    <div class="personal-info">
+      <h1>My Profile</h1>
         <div class="card-product1">
           <div class="card_product_infos">
             <ul>
@@ -71,9 +75,11 @@
           </div>
         </div>
       </div>
-       <div class="icon">
+       <div class="icon-pencil">
           <%= link_to edit_user_registration_path do %>
+          <i class="color-fas-pencil-alt">
           <i class="fas fa-pencil-alt"></i>
+          </i>
           <% end %>
       </div>
     </div>
