--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -18,11 +18,33 @@
 }
 
 
-.navbar-nav p {
-margin-top: 10px;
-margin-right: 8px;
-font-size: 14px;
-font-family: "Roboto", sans-serif;
-color: #666666;
+.navbar-nav a {
+  margin-top: 30px;
+  padding-top: 10px;
+  margin-right: 8px;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  color: #737373;
+  text-decoration: none;
+  &:hover {
+    color: #595959;
+  }
 
 }
+
+.navbar-nav {
+  align-items: center;
+  .color-far-bell {
+  color: #f8a978
+}
+
+.color-fas-bell {
+  color: #f8a978
+}
+}
+
+.nav-item {
+  margin-right: 12px;
+}
+
+
